# NFT-Batch-Download

./: .gitignore  LICENSE  README.md  render.yaml
backend/: Server.Dockerfile  Worker.Dockerfile  celeryconfig.py  constants.py  db_access.py  future_tasks.py  pyproject.toml  server.py  tasks.py
backend/iaac/: render.yaml
backend/logConfig/: logging.ini
backend/prisma/: schema.prisma
frontend/: package.json  tsconfig.json
frontend/components/: Faq.tsx  Footer.tsx
frontend/nft-batch-download/: package.json
frontend/pages/: index.tsx
frontend/styles/: globals.css
