[tool.poetry]
name = "nft-batch-download"
version = "0.1.0"
description = "Batch download NFT Collection Images"
authors = ["verumlotus <universumtremendum@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
web3 = "^5.29.2"
python-dotenv = "^0.20.0"
requests = "^2.28.1"
boto3 = "^1.24.24"
boto3-stubs = {extras = ["essential"], version = "^1.24.24"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
